--- a/build.gradle
+++ b/build.gradle
@@ -33,4 +33,10 @@ ext {
     archLifecycleVersion = '2.2.0-alpha01'
     androidxArchVersion = '2.0.0'
     coroutines = '1.2.0'
+    supportLibraryVersion = '1.1.0-alpha05'
+    materialVersion = '1.0.0'
+    fragmentVersion = '1.1.0-alpha09'
+    recyclerViewVersion = '1.1.0-alpha05'
+    constraintLayoutVersion = '2.0.0-beta1'
+
 }
